# surprisal

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  install.sh  pyproject.toml
docs/: handoff-dogfood-launch.md  handoff-first-dogfood-plan.md
docs/specs/: 2026-03-27-concurrent-belief-estimation-design.md
docs/superpowers/plans/: 2026-03-26-phase3-real-experimentation.md  2026-03-27-concurrent-belief-estimation.md
docs/superpowers/specs/: 2026-03-26-phase3-real-experimentation-design.md
sandbox/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu
src/autodiscovery/: cli.py  config.py  db.py  dedup.py  exploration.py  export.py  fsm_runner.py  mcts.py  orchestrator.py  surprisal.py  workspace.py
src/autodiscovery/agents/: claude.py  codex.py  docker.py
src/autodiscovery/prompts/: dedup.md  experiment_generator.md  experiment_programmer.md  experiment_reviewer.md
src/surprisal/: bayesian.py  cli.py  config.py  db.py  dedup.py  exploration.py  export.py  fsm.py  fsm_runner.py  mcp_config.py  mcts.py  models.py  orchestrator.py  progress.py  providers.py  workspace.py
src/surprisal/agents/: backends.py  base.py  (+5 more)
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_dedup.py  test_exploration.py  test_export.py  test_fsm.py  test_fsm_runner.py  test_integration.py  test_mcp_config.py  test_mcts.py  test_models.py  test_orchestrator.py  test_prompts.py  test_providers.py  test_surprisal.py  test_workspace.py
tests/test_agents/: test_backends.py  test_claude.py  test_codex.py  test_docker.py  test_experiment_container.py  test_hf_jobs.py
(+9 files in other folders)
