[project]
name = "autodiscovery"
version = "0.1.0"
description = "Open-ended scientific discovery via Bayesian surprise"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "scipy>=1.11",
    "numpy>=1.24",
]

[dependency-groups]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
autodiscovery = "autodiscovery.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
